[package]
name = "triangle"
version = "0.1.0"
edition = "2021"
authors = ["husky <husky.robot.dog@gmail.com>"]
license = "MIT"
repository = "https://github.com/huskyrobotdog/triangle"
homepage = "https://github.com/huskyrobotdog/triangle"
description = ""
readme = "README.md"
exclude = [".vscode", "rustfmt.toml"]

[dependencies]
# async
tokio = { version = "1.36.0", features = ["full"] }
futures = { version = "0.3.30" }
async-trait = { version = "0.1.77" }
# common
anyhow = { version = "1.0.75", features = ["backtrace"] }
config = { version = "0.14.0", default-features = false, features = [
    "toml",
], optional = true }
chrono = { version = "0.4.34", features = ["serde"], optional = true }
num_cpus = { version = "1.16.0" }
rust_decimal = { version = "1.35.0", optional = true }
log = { version = "0.4.21", optional = true }
# serde
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
serde_urlencoded = { version = "0.7" }
# tracing
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
tracing-appender = { version = "0.2.3", optional = true }
# http
reqwest = { version = "0.12.1", default-features = false, features = [
    "rustls-tls",
    "json",
], optional = true }
# snowflake
snowflaked = { version = "1.0.2", features = ["sync"], optional = true }
# crypto
ring = { version = "0.17.8", optional = true }
base64 = { version = "0.22.0", optional = true }
# database
sea-orm = { version = "0.12.14", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
], optional = true }
# web
actix-web = { version = "4.5.1", optional = true }

[features]
default = []
env = ["dep:config"]
database = ["dep:sea-orm", "dep:log", "chrono", "decimal"]
crypto = ["dep:ring", "dep:base64"]
log = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-appender",
    "chrono",
]
http = ["dep:reqwest"]
uuid = ["dep:snowflaked"]
chrono = ["dep:chrono"]
web = ["dep:actix-web"]
decimal = ["dep:rust_decimal"]
