[package]
name = "triangle"
version = "0.1.0"
edition = "2021"
authors = ["husky <husky.robot.dog@gmail.com>"]
license = "MIT"
repository = "https://github.com/huskyrobotdog/triangle"
homepage = "https://github.com/huskyrobotdog/triangle"
description = ""
readme = "README.md"
exclude = [".vscode", "rustfmt.toml"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = 'abort'

[dependencies]
# common
tokio = { version = "1.36.0", features = ["full"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
num_cpus = { version = "1.16.0" }
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_urlencoded = { version = "0.7", optional = true }
serde_json = { version = "1.0.114", optional = true }
chrono = { version = "0.4.34", features = ["serde"], optional = true }
log = { version = "0.4.21", optional = true }
# env
config = { version = "0.14.0", default-features = false, features = [
    "toml",
], optional = true }
# log
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }
tracing-appender = { version = "0.2.3", optional = true }
# http
reqwest = { version = "0.12.1", default-features = false, features = [
    "rustls-tls",
    "json",
], optional = true }
# uuid
snowflaked = { version = "1.0.2", features = ["sync"], optional = true }
# crypto
ring = { version = "0.17.8", optional = true }
base64 = { version = "0.22.0", optional = true }
# orm
sea-orm = { version = "0.12.14", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
], optional = true }


[features]
default = []
serde = ["dep:serde", "dep:serde_urlencoded"]
chrono = ["dep:chrono"]
json = ["dep:serde_json"]
env = ["dep:config"]
logger = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-appender",
    "chrono",
]
http = ["dep:reqwest", "serde", "json"]
uuid = ["dep:snowflaked"]
crypto = ["dep:ring", "dep:base64"]
orm = ["dep:sea-orm", "dep:log"]
